1037: Fix language selector is covered on English
When content language is English.

--- a/source/widgets/header/header.scss
+++ b/source/widgets/header/header.scss
@@ -97,7 +97,7 @@ body.is-env-test .widg_header {
 
 	@include mq($from: medium) {
 		.-ms- & {
-			min-height: 620px;
+			min-height: 680px;
 		}
 	}
 
